2002-04-02  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION: release 1.5.50

	* lily/spaceable-grob.cc (add_spring): change incorrect spring to
	unit spring here. Reduces number of warning messages.

	* lily/auto-beam-engraver.cc: change noAutoBeaming to autoBeaming.

2002-04-01  Han-Wen  <hanwen@cs.uu.nl>

	* scm/generic-property.scm: remove generic-property, property-engraver

	* lily/volta-bracket.cc (brew_molecule): use Lookup::line() for bracket

	* lily/hairpin.cc (brew_molecule): use Lookup::line() for hairpins.

	* ps/music-drawing-routines.ps: remove volta, tuplet, hairpin routines.

	* scm/*.scm: remove volta, hairpin and tuplet functions.

	* lily/rhythmic-column-engraver.cc (acknowledge_grob): don't make
	note column for notes/stems/dots that already have parents. Fixes
	nested grace contexts.

2002-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mozart-hrn-3.ly: Tweak Slur.beautiful, so that we don't
	get too curved slurs.

	* scm/slur.scm (default-slur-extremity-offset-alist) 
	(default-phrasing-slur-extremity-offset-alist): Move slur
	attachments further away from note-head, vertically.  Also, leave
	a horizontal gap between slur and stem end.

	* lily/beam.cc (get_interbeam): Bugfix: don't look in empty list.

2002-04-01  Han-Wen  <hanwen@cs.uu.nl>

	* input/regression/spacing-grace-duration.ly: new file

	* lily/spacing-engraver.cc (acknowledge_grob): ignore grace notes
	for shortest durations.

	* lily/multi-measure-rest.cc (set_spacing_rods): tune rods to the
	extent of the mm rest. 

	* lily/spacing-spanner.cc (get_duration_space): better spacing for
	really short notes.

	* lily/tuplet-bracket.cc (make_bracket): new function
	(get_x_offset): new function; make tuplet brackets align on stems
	if stem has same direction.
	(parallel_beam): be anal about matching bracket to tuplet.

	* lily/lookup.cc (line): new function Lookup::line(). 

	* scm/tex.scm (dashed-line): change -line to -system in names.

	* lily/box.cc (add_point): new function.
