@@ -1,8 +1,16 @@
+\header {
+    texidoc = "Dots move to the right when a collision with the (up)flag happens"
+}
 
-\header { texidoc = "Dots are moved right if flags and dots
-collide. This doesn't happens when the dot fits beneath the flag " }
-
-\score{
-  \notes\relative c'{ f8. g f16. g f32. g}
+\score {
+    \notes\relative c''
+    {
+	\time 8/4
+	\property Staff.autoBeaming = ##f
+	a,16.
+	g''16.
+	a,4. a8 a8. a16. c,16. g16.
+    }
+    \paper { linewidth = -1. }
 }
 
