@@ -18,7 +18,7 @@ public:
   DECLARE_SCHEME_CALLBACK (brew_molecule, (SCM ));
 
   static Array<int> note_head_positions (Grob*);
-  static  int flag_i (Grob*) ;
+  static  int duration_log (Grob*) ;
   static int beam_count (Grob*,Direction) ;
   static void set_beaming (Grob*,int,  Direction d);
   static Grob * beam_l (Grob*);
