@@ -109,9 +109,9 @@ Stem_engraver::acknowledge_grob (Grob_info i)
 	  announce_grob(stem_p_, i.music_cause ()->self_scm());
 	}
 
-      if (Stem::flag_i (stem_p_) != duration_log)
+      if (Stem::duration_log (stem_p_) != duration_log)
 	{
-	  i.music_cause ()->origin ()->warning (_f ("Adding note head to incompatible stem (type = %d)", 1 <<  Stem::flag_i (stem_p_)));
+	  i.music_cause ()->origin ()->warning (_f ("Adding note head to incompatible stem (type = %d)", 1 <<  Stem::duration_log (stem_p_)));
 	}
 
       Stem::add_head (stem_p_,h);
